--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -23,6 +23,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 codesign/enable=false
+codesign/identity_type=0
 codesign/identity=""
 codesign/password=""
 codesign/timestamp=true
@@ -30,6 +31,7 @@ codesign/timestamp_server_url=""
 codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
+application/modify_resources=true
 application/icon=""
 application/file_version=""
 application/product_version=""
@@ -48,7 +50,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="export/backrooms.x86_64"
+export_path="./backrooms.x86_64"
 script_export_mode=1
 script_encryption_key=""
 
